- Making a hotfix for ajax cart to avoid cart animations on small devices

--- a/src/styles/layout/_navigation.scss
+++ b/src/styles/layout/_navigation.scss
@@ -452,9 +452,12 @@
 
 
 
+  @include media-query($medium-up) {
 
 
 .mainNav-menuContainer {
+
+    
   opacity: 0;  
   position: absolute;
   z-index: 0; 
@@ -485,6 +488,7 @@
   }
 }
 
+  }
 
 
 @keyframes  main-nav-appear {
